# search

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  makefile  pyproject.toml  pytest.ini
libs/desp_shared_library/: pyproject.toml
libs/desp_shared_library/despsharedlibrary/schemas/: collaborative_schema.py
search/: main.py
search/models/: constants.py  elastic.py  exceptions.py  mails.py  metadatas.py  responses.py  subscriptions.py
search/routes/: metadatas.py  search.py  subscriptions.py
search/services/: auth_service.py  metadatas.py  search.py  subscriptions.py
